$Id$

2017-01-28  Christian Franke  <franke@computer.org>

	Add ident style configuration for EditorConfig
	(http://editorconfig.org/):
	.editorconfig: New file.
	Makefile.am: Add new file to source tarball.

2017-01-21  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Marvell based SanDisk SSDs: X300 OEM (ticket #747),
	  X400 (ticket #715), Ultra II (ticket #744)
	- USB: Renesas uPD720231A (0x045b:0x0229)
	- USB: Maxtor D3 Station 5TB (0x0bc2:0x6126)
	- USB: Seagate Backup Plus 8TB (0x0bc2:0xab38) (ticket #786)
	- USB: WD Elements / My Passport (0x1058:0x107d) (ticket #772)
	- USB: WD Elements / My Passport (0x1058:0x25a1) (ticket #773)
	- USB: WD My Book 4TB (0x1058:0x25a3) (ticket #784)
	- USB: WD Elements / My Passport: Merge entries
	- USB: WD My Book: Merge entries

2017-01-14  Christian Franke  <franke@computer.org>

	scsiata.cpp: Remove redundant assignment
	(cppcheck: redundantAssignment).

	ataprint.cpp, ataprint.h, smartctl.cpp, smartctl.8.in:
	Add STATUS parameter to '-n POWERMODE' option (ticket #697).

2017-01-13  Christian Franke  <franke@computer.org>

	configure.ac: Rework CXXFLAGS settings, use shell intrinsics.

	os_win32.cpp: Fix harmless buffer overflow bug
	(found by VC14 code analyser).

2017-01-12  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Innodisk 1ME3/3ME/3SE SSDs: Rename, add 1ME3 (ticket #713), 3SE
	- Innodisk 3IE2/3ME2/3MG2/3SE2 SSDs: Rename, add 3ME2
	- Samsung based SSDs: 750 EVO, PM810(470), 840, PM830, PM851,
	  CM871 (ticket #754), CM871a, PM871a (tickets #745, #775),
	  SM951 (ticket #704)

2017-01-11  Christian Franke  <franke@computer.org>

	smartctl.8.in: Make '-d intelliprop' visible on all platforms.
	Add warning.
	smartd.conf.5.in: Document '-d intelliprop'.

	os_win32/vc14/smart*.vcxproj*: Add new files.

	AUTHORS: Add Casey Biemiller

2017-01-11  Casey Biemiller  <cbiemiller@intelliprop.com>

	Add '-d intelliprop' device type for drives behind IntelliProp
	RAID controllers (ticket #730):