@@ -2,6 +2,9 @@ $Id$
 
 2017-01-28  Christian Franke  <franke@computer.org>
 
+	os_win32.cpp, scsiata.cpp, scsicmds.cpp, scsiprint.cpp: Fix 'if'
+	and 'else' clause indentations (g++ 6.3: -Wmisleading-indentation).
+
 	Add ident style configuration for EditorConfig
 	(http://editorconfig.org/):
 	.editorconfig: New file.
